fixed spacing for student check button

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,5 +52,10 @@ nav {
 }
 
 .footer p {
-  margin-top: 1em; 
+  margin-top: 1em;
+}
+
+.generate-student-check-button-container {
+  margin-top: 1em;
+  margin-bottom: 2em; 
 }
